# fastweb

./: .env  .env.example  Cargo.toml  README.md  basic_setup.sh  make_watch.sh
migrations/: 20230320222959_user.sql
src/: lib.rs  main.rs  prelude.rs
src/controllers/: mod.rs
src/controllers/admin/: mod.rs
src/controllers/auth/: mod.rs
src/controllers/errors/: mod.rs
src/controllers/frontend/: mod.rs
src/email/: smtp.rs
src/models/: mod.rs  user.rs
static/favicon/: about.txt
templates/: index.html
templates/email/: layout.html  new-password.html  new-password.txt  register.html
templates/modern-business/: blog-home.html  index.html  layout.html
templates/modern-business/auth/: login.html  recover-password.html  register.html
