[package]
name = "fastweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-session = { version = "0.7.2", features = ["redis-actor-session"] }
actix-web = "4.3.1"
actix-web-lab = "0.19.1"
env_logger = "0.10.0"
tera = "1.18.0"
