[package]
name = "fastweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-identity = "0.5.2"
actix-session = { version = "0.7.2", features = ["redis-actor-session"] }
actix-web = "4.3.1"
actix-web-lab = "0.19.1"
anyhow = "1.0.70"
chrono = "0.4.24"
djangohashers = "1.6.3"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
env_logger = "0.10.0"
lettre = "0.10.3"
log = "0.4.17"
proc-macro2 = "1.0.28"
rand = "0.8.5"
serde = { version = "1.0.158", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["postgres","runtime-actix-native-tls","time"] }
tera = "1.18.0"
validator = { version = "0.12", features = ["derive"] }
